--- a/landing.html
+++ b/landing.html
@@ -11,14 +11,51 @@
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
     <!-- <link rel="stylesheet" type="text/css" href="css/main.css"> -->
-    <link rel="stylesheet" type="text/css" href="css/post.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="cs-select.css">
     <link rel="stylesheet" type="text/css" href="cs-skin-overlay.css">
     <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>   
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script> 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
-<div></div>
+    <div class="container">
+
+        <div class="nav menu" id="nav" role="navigation">
+            <div class="toggle">
+                <i class="fas fa-bars "></i>
+            </div>
+            <ul class="inter_el">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#blog">Blog</a>
+                </li>
+                <li>
+                    <a href="#contacts">Contacts</a>
+                </li>
+            </ul>
+        </div>
+        <div class="section" id="hero_section">
+            <div class="hero_txt" >
+                <h1> Hi there my name is Max and I am a web analyst</h1>
+                <span id="typed"></span>
+                <p>Fill free write me and ask about whatever you want.</p>
+                <div id="typed-strings">
+                    <p>I've create this site for doing some notices and share my expirence with socity</p>
+                  </div>
+            </div>
+            <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
+        </div>
+
+        <div class="container">
+            <div class="stick stick-1"></div>
+            <div class="stick stick-2"></div>
+            <div class="stick stick-3"></div>
+          </div>
+
+    </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
