Lp new sections

--- a/landing.html
+++ b/landing.html
@@ -37,9 +37,9 @@
                 </li>
             </ul>
         </div>
-        <div class="section" id="hero_section">
+        <section class="section" id="hero_section">
             <div class="hero_txt" >
-                <h1> Hi there my name is Max and I am a web analyst</h1>
+                <h1 id="pick-me"> Hi there my name is Max and I am a web analyst</h1>
                 <span id="typed"></span>
                 <p>Fill free write me and ask about whatever you want.</p>
                 <div id="typed-strings">
@@ -47,13 +47,45 @@
                   </div>
             </div>
             <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
-        </div>
+        </section>
 
-        <div class="container">
-            <div class="stick stick-1"></div>
-            <div class="stick stick-2"></div>
-            <div class="stick stick-3"></div>
-          </div>
+        <section class="section" id="profit_section">
+            <div class="hero_txt" >
+                <h1 id="pick-me"> Hi there my name is Max and I am a web analyst</h1>
+                <span id="typed"></span>
+                <p>Fill free write me and ask about whatever you want.</p>
+                <div id="typed-strings">
+                    <p>I've create this site for doing some notices and share my expirence with socity</p>
+                  </div>
+            </div>
+            <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
+        </section>
+
+        <section class="section" id="audit_section">
+            <div class="hero_txt" >
+                <h1 id="pick-me"> Hi there my name is Max and I am a web analyst</h1>
+                <span id="typed"></span>
+                <p>Fill free write me and ask about whatever you want.</p>
+                <div id="typed-strings">
+                    <p>I've create this site for doing some notices and share my expirence with socity</p>
+                  </div>
+            </div>
+            <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
+        </section>
+
+        <section class="section" id="implement_section">
+            <div class="hero_txt" >
+                <h1 id="pick-me"> Hi there my name is Max and I am a web analyst</h1>
+                <span id="typed"></span>
+                <p>Fill free write me and ask about whatever you want.</p>
+                <div id="typed-strings">
+                    <p>I've create this site for doing some notices and share my expirence with socity</p>
+                  </div>
+            </div>
+            <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
+        </section>
+
+ 
 
     </div>
     <script src="js/app.js"></script>
