--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
     <!-- <link rel="stylesheet" type="text/css" href="css/main.css"> -->
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/lp.css">
 	<link rel="stylesheet" type="text/css" href="cs-select.css">
     <link rel="stylesheet" type="text/css" href="cs-skin-overlay.css">
     <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
@@ -21,11 +21,11 @@
 <body>
     <div class="container">
 
-        <div class="nav menu" id="nav" role="navigation">
+        <div class="nav menu roundedBox" id="nav" role="navigation">
             <div class="toggle">
                 <i class="fas fa-bars "></i>
             </div>
-            <ul class="inter_el">
+            <!-- <ul class="inter_el">
                 <li>
                     <a href="#">Home</a>
                 </li>
@@ -35,11 +35,11 @@
                 <li>
                     <a href="#contacts">Contacts</a>
                 </li>
-            </ul>
+            </ul> -->
         </div>
         <section class="section" id="hero_section">
             <div class="hero_txt" >
-                <h1 id="pick-me"> Hi there my name is Max and I am a web analyst</h1>
+                <h1 id="pick-me">hero_section</h1>
                 <span id="typed"></span>
                 <p>Fill free write me and ask about whatever you want.</p>
                 <div id="typed-strings">
@@ -51,7 +51,7 @@
 
         <section class="section" id="profit_section">
             <div class="hero_txt" >
-                <h1 id="pick-me"> Hi there my name is Max and I am a web analyst</h1>
+                <h1 id="pick-me">profit_section</h1>
                 <span id="typed"></span>
                 <p>Fill free write me and ask about whatever you want.</p>
                 <div id="typed-strings">
@@ -63,7 +63,7 @@
 
         <section class="section" id="audit_section">
             <div class="hero_txt" >
-                <h1 id="pick-me"> Hi there my name is Max and I am a web analyst</h1>
+                <h1 id="pick-me">audit_section</h1>
                 <span id="typed"></span>
                 <p>Fill free write me and ask about whatever you want.</p>
                 <div id="typed-strings">
@@ -75,7 +75,7 @@
 
         <section class="section" id="implement_section">
             <div class="hero_txt" >
-                <h1 id="pick-me"> Hi there my name is Max and I am a web analyst</h1>
+                <h1 id="pick-me">implement_section</h1>
                 <span id="typed"></span>
                 <p>Fill free write me and ask about whatever you want.</p>
                 <div id="typed-strings">
@@ -84,6 +84,22 @@
             </div>
             <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
         </section>
+
+        <section class="section" id="footer_section">
+            <div class="footer-group">  
+                <a name="contacts"></a>         
+                <p>Contacts</p>
+                <p>Mon–Fri 8:30am – 9pm</p>
+                <ul class="ul-icon">
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-telegram-plane"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                </ul>
+                <p>Designed by M.Mezhigurskii</p>
+            </div>
+        </div>
+    </section>
 
  
 
