--- a/index.html
+++ b/index.html
@@ -19,20 +19,14 @@
 <body>
     <div class="container">
 
-        <div class="nav" id="nav" role="navigation">
-            
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#blog">Blog</a>
-                </li>
-                <li>
-                    <a href="#contacts">Contacts</a>
-                </li>
-            </ul>
-        </div>
+        <nav role="navigation">
+            <button id="burger" class="open-main-nav">
+                <span class="burger"></span>
+                <span class="burger-text">Menu</span>
+                </button>
+            <div id="menuToggle">
+           </div>
+          </nav>
         <div class="section" id="hero_section">
             <div class="hero_txt">
                 <h1 > Hi there my name is Max and I am a web analyst</h1>
@@ -187,6 +181,6 @@
             </div>
         </div>
     </div>
-    
+    <script src="js/app.js"></script>
 </body>
 </html>
