--- a/landing.html
+++ b/landing.html
@@ -19,70 +19,82 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <div class="container">    
+        <nav role="navigation">
+            <button id="burger" class="open-main-nav">
+                <span class="burger"></span>
+                <span class="burger-text">Menu</span>
+                </button>
+            <div id="menuToggle">
+           </div>
+          </nav>
 
-        <div class="nav menu roundedBox" id="nav" role="navigation">
-            <div class="toggle">
-                <i class="fas fa-bars "></i>
-            </div>
-            <!-- <ul class="inter_el">
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#blog">Blog</a>
-                </li>
-                <li>
-                    <a href="#contacts">Contacts</a>
-                </li>
-            </ul> -->
-        </div>
         <section class="section" id="hero_section">
+            
             <div class="hero_txt" >
-                <h1 id="pick-me">hero_section</h1>
+                <h1 id="pick-me">Do you want to increase of perform of your website?</h1>
+                <p>In this case you mast to have occurate tracking!</p>
                 <span id="typed"></span>
-                <p>Fill free write me and ask about whatever you want.</p>
                 <div id="typed-strings">
-                    <p>I've create this site for doing some notices and share my expirence with socity</p>
-                  </div>
+                    <p>What does it mean? Read below or leave contact...</p>
+                </div>
             </div>
             <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
         </section>
 
         <section class="section" id="profit_section">
-            <div class="hero_txt" >
-                <h1 id="pick-me">profit_section</h1>
-                <span id="typed"></span>
-                <p>Fill free write me and ask about whatever you want.</p>
-                <div id="typed-strings">
-                    <p>I've create this site for doing some notices and share my expirence with socity</p>
-                  </div>
+            <div class="block-heading">
+                <h3>What's the profit</h3>
             </div>
-            <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
+                <div class='prof_item'>
+                    <div class="group_profit">
+                        <div class="prof_img"><img src="css/pictures/bach.png"/></div>
+                        <p>Understand behavior of people. Why they don't leave orders or opposite do that.</p>
+                    </div>
+                    <div class="group_profit_rev">
+                        <div class="prof_img"><img src="css/pictures/database2.png"/></div>
+                        <p>Help your DataBase team to saturate data by new metrics and properties.</p>
+                    </div>
+                    <div class="group_profit">
+                        <div class="prof_img"><img src="css/pictures/dash.png"/></div>
+                        <p>Create a base for dashboarding, researching and automation routine things.</p>
+                    </div>
+                    <div class="group_profit_rev">
+                        <div class="prof_img"><img src="css/pictures/ppc.png"/></div>
+                        <p>Help PPC team does the best and show stable increasing of KPI.</p>
+                    </div>
+                </div>
         </section>
 
         <section class="section" id="audit_section">
+            <div class="block-heading">
+                <h3>Audit or recompelation</h3>
+            </div>
             <div class="hero_txt" >
-                <h1 id="pick-me">audit_section</h1>
-                <span id="typed"></span>
-                <p>Fill free write me and ask about whatever you want.</p>
-                <div id="typed-strings">
-                    <p>I've create this site for doing some notices and share my expirence with socity</p>
-                  </div>
+                <h1 id="">Audit or recompelation</h1>
+                <p>If you have embeded analytical tool and you are not sure that works right let's see.
+                I can give you a recomendation or just say it works perfect and don't touch it.
+                If monthly you have some tasks but for some reason you don't want to hire a web analyst to the fullstaff I can take this work like outstaff.
+                </p>
             </div>
             <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
         </section>
 
         <section class="section" id="implement_section">
-            <div class="hero_txt" >
-                <h1 id="pick-me">implement_section</h1>
-                <span id="typed"></span>
-                <p>Fill free write me and ask about whatever you want.</p>
-                <div id="typed-strings">
-                    <p>I've create this site for doing some notices and share my expirence with socity</p>
-                  </div>
+            <div class="block-heading">
+                <h3>How implementing is going</h3>
             </div>
-            <div class="hero_img"><img src="css/pictures/gtm-log.png"/></div>
+            <div class="hero_txt" >
+                <h1 id="pick-me">How implementing is going</h1>
+                <p>First of all I try to understand your needs and create a businnes requariments.
+                    If it's clear for you and me what result should be  I begin develop tracking for you.
+                    As only tracking is ready we test it together on a test stand.
+                    Then I will publish it to live. During one week I will be gathering result and again make shure that is all right.
+                    And I will pass the work.  
+
+                </p>
+            </div>
+
         </section>
 
         <section class="section" id="footer_section">
